# robot_ai

./: .gitignore  README.md
brain/: CMakeLists.txt  package.xml
brain/src/: brain.py  brain.py~  direction_handler.py  obstacle_handler.py
imu/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
imu/src/: imu.cpp
ir_converter/: CMakeLists.txt  ir_converter.cpp  ir_converter.h  package.xml
ir_converter/msg/: Distance.msg
mapping/: CMakeLists.txt  package.xml
mapping/include/mapping/: mapping.h
mapping/src/: mapping.cpp
navigation/: CMakeLists.txt  package.xml
navigation/include/navigation/: Graph.h  GraphViz.h
navigation/src/: graph.cpp
navigation_msgs/: CMakeLists.txt  package.xml
navigation_msgs/msg/: Node.msg  Path.msg
navigation_msgs/srv/: FitBlob.srv  NextNodeOfInterest.srv  PlaceNode.srv  Raycast.srv  TransformPoint.srv  UnexploredRegion.srv
odometry/: CMakeLists.txt  package.xml
odometry/src/: calibrator.cpp  pose_generator.cpp
report/figures/: architecture_m1.graphml
robot_ai/: CMakeLists.txt  package.xml
robot_ai/scripts/: CMakeListsInsert.py  catkin_create_metapkg  catkin_create_node  con  conx  node.cpp.template
robot_ai_launch/: CMakeLists.txt  package.xml
robot_ai_launch/launch/: ai.launch  all.launch  p1.launch  p2.launch  primesense.launch
