<?xml version="1.0"?>
<package>
 <name>imu</name>
  <version>0.1.0</version>
  <description>The IMU package</description>
  <url>https://github.com/KTH-RAS-HT14-G9/robot_ai</url>

  <author email="tobias2@kth.se">Tobias Andersson</author>
  <author email="mmlosch@kth.se">Max Losch</author>
  <author email="dimm@kth.se">Diego Martinez Marrodan</author>
  <author email="tiagos@kth.se">Tiago Sebastiao</author>
  <author email="lanwang@kth.se">Lan Wang</author>

  <maintainer email="tobias2@kth.se">Tobias Andersson</maintainer>
  <maintainer email="mmlosch@kth.se">Max Losch</maintainer>
  <maintainer email="dimm@kth.se">Diego Martinez Marrodan</maintainer>
  <maintainer email="tiagos@kth.se">Tiago Sebastiao</maintainer>
  <maintainer email="lanwang@kth.se">Lan Wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>phidgets_imu</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>common</build_depend>

  <run_depend>phidgets_imu</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>common</run_depend>


</package>
